# schmfy_express

./: .dockerignore  Cargo.toml  Dockerfile  justfile
src/: home.html  main.rs
