[package]
name = "schmfy_express"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
dotenvy = "0.15.7"
futures = "0.3.30"
miette = { version = "7.2.0", features = ["fancy"] }
schmfy = "0.2.1"
serde = { version = "1.0.200", features = ["derive"] }
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
